clmpkg/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Apttus__Other_Party_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to contact record to identify external signatory</description>
        <label>Other Party Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001Xl0MEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_Date__c</fullName>
        <description>Date when external signatory signed</description>
        <label>Other Party Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_Title__c</fullName>
        <description>Title of person signing on bahalf of Other Party</description>
        <label>Other Party Signed Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Outstanding_Days__c</fullName>
        <description>Number of days between date agreement was today, if not returned as yet.  Esle number of days between returned and sent.</description>
        <formula>IF(ISNULL(  Apttus__Other_Party_Returned_Date__c ), TODAY () -   Apttus__Other_Party_Sent_Date__c ,   Apttus__Other_Party_Returned_Date__c   -   Apttus__Other_Party_Sent_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Owner_Expiration_Notice__c</fullName>
        <description>To indicate the number of days prior to expiration date that a notification needs to be sent to the owner</description>
        <label>Owner Expiration Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                    <default>true</default>
                    <label>90 Days</label>
                </value>
                <value>
                    <fullName>120 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Parent_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Child Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether agreement has an end date specified</description>
        <label>Perpetual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Primary Contact)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N50000001Xl0FEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Remaining_Contracted_Days__c</fullName>
        <description>If the agreement is In Effect, this value is calculated as Contract Duration Days less Contracted Days</description>
        <formula>IF(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;), (Apttus__Contract_Duration_Days__c &gt; 0), (Apttus__Contracted_Days__c &gt; 0)), (Apttus__Contract_Duration_Days__c - Apttus__Contracted_Days__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Renewal_Notice_Date__c</fullName>
        <description>Issue Renewal Notice Date = End Date - Renewal Notice Days</description>
        <formula>IF( NOT( ISNULL( Apttus__Contract_End_Date__c ) ) , Apttus__Contract_End_Date__c  -  Apttus__Renewal_Notice_Days__c  , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Renewal_Notice_Days__c</fullName>
        <description>The number of days before end date when renewal notice is due</description>
        <label>Renewal Notice Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Request_Date__c</fullName>
        <description>The date the agreement was requested</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__RetentionDate__c</fullName>
        <description>Date until to retain the record</description>
        <label>Retention Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__RetentionPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated retention policy</description>
        <label>Retention Policy</label>
        <referenceTo>Apttus__RetentionPolicy__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Risk_Rating__c</fullName>
        <description>This field allows users to track agreement risk rating</description>
        <label>Risk Rating</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Source__c</fullName>
        <description>Source of this contract – internal paper or third party contract</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Paper</fullName>
                    <default>true</default>
                    <label>Internal Paper</label>
                </value>
                <value>
                    <fullName>Other Party Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Special_Terms__c</fullName>
        <description>Identifies any special terms related to contract</description>
        <label>Special Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Status_Category__c</fullName>
        <description>The higher level state of the agreement – In Authoring, In Effect, Expired, etc.  These are Apttus reserved values and cannot be changed.</description>
        <label>Status Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                    <label>Request</label>
                </value>
                <value>
                    <fullName>In Authoring</fullName>
                </value>
                <value>
                    <fullName>In Signatures</fullName>
                </value>
                <value>
                    <fullName>In Filing</fullName>
                </value>
                <value>
                    <fullName>In Effect</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <description>The sub stage of an agreement – the status underneath a given status category.  These are generally modifiable by the customer except for the following values which are Apttus reserved to manage agreement lifecycles:

Request, Submitted Request,
Cancelled Request, In Amendment, Being Amended, Superseded, Activated, Expired, Internal Signatures, Author Contract, Expired, Terminated,  Ready for Signatures, Fully Signed, Signature Declined</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Status_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Request Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted Request</fullName>
                </value>
                <value>
                    <fullName>Approved Request</fullName>
                </value>
                <value>
                    <fullName>Cancelled Request</fullName>
                </value>
                <value>
                    <fullName>In Amendment</fullName>
                </value>
                <value>
                    <fullName>Author Contract</fullName>
                </value>
                <value>
                    <fullName>Language Approval</fullName>
                </value>
                <value>
                    <fullName>Language Approved</fullName>
                </value>
                <value>
                    <fullName>Internal Signatures</fullName>
                </value>
                <value>
                    <fullName>Other Party Signatures</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
                <value>
                    <fullName>Being Renewed</fullName>
                </value>
                <value>
                    <fullName>In Renewal</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Being Terminated</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>In Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>Other Party Review</fullName>
                </value>
                <value>
                    <fullName>Signature Declined</fullName>
                </value>
                <value>
                    <fullName>Ready for Signatures</fullName>
                </value>
                <value>
                    <fullName>Fully Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Submit_Request_Mode__c</fullName>
        <label>Submit Request Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Subtype__c</fullName>
        <description>The subtype of the agreement for a given agreement type</description>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Term_Months__c</fullName>
        <description>Indicates the duration in months of the contract from the start date</description>
        <label>Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__TerminationComments__c</fullName>
        <description>Termination Comments</description>
        <label>Termination Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Termination_Date__c</fullName>
        <description>Date contract terminated</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Termination_Notice_Days__c</fullName>
        <description>Notice period prior to termination</description>
        <label>Termination Notice Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Termination_Notice_Issue_Date__c</fullName>
        <description>Date termination notice was sent / received</description>
        <label>Termination Notice Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Total_Contract_Value__c</fullName>
        <description>Total value of agreement</description>
        <label>Total Agreement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionAware__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this agreement is Version aware. This flag enables versioning on all documents of this agreement record, provided document versioning is enabled in custom settings.</description>
        <inlineHelpText>Indicates if this agreement is Version aware. This flag enables versioning on all documents of this agreement record, provided document versioning is enabled in custom settings.</inlineHelpText>
        <label>Version Aware</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Version_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Version Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Version__c</fullName>
        <defaultValue>0</defaultValue>
        <description>THIS FIELD IS OBSOLETE.  PLEASE DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <label>Version (OBSOLETE)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Workflow_Trigger_Created_From_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a transient agreement that may get deleted by the user. A new agreement is in transient state until the agreement is explicitly saved by the user. A new agreement is created by new, clone, amend, renew, create offline or create from opportunity methods. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient agreements are created .</description>
        <inlineHelpText>Indicates a transient agreement that may get deleted by the user. A new agreement is in transient state until the agreement is explicitly saved by the user.</inlineHelpText>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Workflow_Trigger_Viewed_Final__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that gets set by the Generate Agreement scontrol when an agreement is generated.  This flag then becomes the trigger for workflow rules that get fired when the Generate Agreement action is completed.</description>
        <label>Workflow Trigger Generated Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_CPM_for_Ads__c</fullName>
        <label>Average CPM for Ads</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Error_Rate_for_Ads__c</fullName>
        <label>Average Error Rate for Ads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Fill_Rate_for_Ads__c</fullName>
        <label>Average Fill Rate for Ads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BitsRevenueTerms__c</fullName>
        <description>Field displays how a Partner gets a share of the revenue:
- Standard ($0.01 per bit)
- Custom (Text Box)
- None</description>
        <label>Bits Revenue Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard ($0.01 per bit)</fullName>
                    <default>true</default>
                    <label>Standard ($0.01 per bit)</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bits_Revenue_Cumulative__c</fullName>
        <label>Bits Revenue (Cumulative)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetedCCVsAverage__c</fullName>
        <label>Budgeted CCVs (Average)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetedLiveHWCumulative__c</fullName>
        <label>Budgeted Live HW (Cumulative)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetedVODHWCumulative__c</fullName>
        <label>Budgeted VOD HW (Cumulative)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <inlineHelpText>Name of Business Entity</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentApprovalDate__c</fullName>
        <label>Content Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContentApprovalSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Backend field used to update the related Opportunity.</description>
        <label>Content Approval Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Content Approver related to the User in the Requestor field on the Agreement</description>
        <label>Content Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CumulativeOperatingIncome__c</fullName>
        <description>Field shows CSOI metric and is based on business operations modeling.</description>
        <label>Cumulative Operating Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomAdDensityRequirement__c</fullName>
        <label>Custom Ad Density Requirement</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomAdvertisingRevenueTerms__c</fullName>
        <label>Custom Advertising Revenue Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomLiveExclusivity__c</fullName>
        <label>Custom Live Exclusivity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomSubscriptionRevenueTerms__c</fullName>
        <label>Custom Subscription Revenue Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomTermLength__c</fullName>
        <inlineHelpText>Number of months.</inlineHelpText>
        <label>Custom Term Length (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomVODExclusivity__c</fullName>
        <label>Custom VOD Exclusivity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DataMigrationID__c</fullName>
        <description>Field is used as a foreign key identifier.</description>
        <externalId>true</externalId>
        <label>Data Migration ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealMemoURL__c</fullName>
        <description>Field is used to record the URL of the deal memo.</description>
        <label>Deal Memo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DealModelUploaded__c</fullName>
        <inlineHelpText>Please upload deal model file on the right, under Contract Details. This is required prior to approval submission, for deals that have a Total Estimated Cost above $250,000.</inlineHelpText>
        <label>Deal Model Uploaded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocuSignStatusFormula__c</fullName>
        <description>DocuSignStatus__r.dsfs__Envelope_Status__c</description>
        <formula>Docusign_Status__r.dsfs__Envelope_Status__c</formula>
        <label>DocuSign Status (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Status from Docusign. Appirio 2018</description>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <inlineHelpText>Date on when you expect the contract to start.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectivevsSignatureDateDayCount__c</fullName>
        <formula>ABS(Apttus__Other_Party_Signed_Date__c - Apttus__Contract_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective vs Signature Date - Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldsForApprovalComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is leveraged in the Apttus IWA set-up.  Do not use in the page layout.</description>
        <inlineHelpText>If the field is &apos;checked&apos;, then all fields needed for approval have a value.</inlineHelpText>
        <label>Fields For Approval Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FuelRevenueTerms__c</fullName>
        <description>Field displays how a Partner gets a share of the revenue: 
- Standard (5%)
- Custom
- None</description>
        <label>Fuel Revenue Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard (5%)</fullName>
                    <default>true</default>
                    <label>Standard (5%)</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fuel_Revenue_Cumulative__c</fullName>
        <label>Fuel Revenue (Cumulative)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generate__c</fullName>
        <description>Field is being used as an alternative to the out-of-box Generate field. The only difference between both formula fields is either in the Status Category, Status, Approval Status, Non-Standard Terms, and/or Profile Name fields in the formula.</description>
        <formula>IF(
AND(
OR($Profile.Name = &quot;Legal&quot;,$Profile.Name = &quot;System Administrator&quot;),
Apttus__Non_Standard_Legal_Language__c = TRUE, 
ISPICKVAL(Apttus_Approval__Approval_Status__c, &quot;Approved&quot;), 
OR(
ISPICKVAL(Apttus__Status__c, &quot;Submitted Request&quot;),
AND(ISPICKVAL(Apttus__Status__c, &quot;Approved Request&quot;),Apttus__Requestor__r.Id &lt;&gt; Owner:User.Id )
),
LatestAgreementCycle__c &lt;&gt; &quot;Renewed&quot;
),
HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;), NULL)</formula>
        <inlineHelpText>&apos;Generate&apos; a document for the Agreement record.</inlineHelpText>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossRevenueCumulative__c</fullName>
        <label>Gross Revenue (Cumulative)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue_kMW__c</fullName>
        <label>Gross Revenue/kMW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inactive_Days2__c</fullName>
        <formula>IF( TODAY() - DATEVALUE(LastModifiedDate ) &gt;= 90 , &apos;90 Days&apos;,
IF( TODAY() - DATEVALUE(LastModifiedDate ) &gt;= 60 , &apos;60 Days&apos;,
IF( TODAY() - DATEVALUE(LastModifiedDate ) &gt;= 30 ,&apos;30 Days&apos;,&apos;None&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncentivePayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is associated to the Incentive Payment process.</description>
        <inlineHelpText>If the field is &apos;checked&apos;, it means &apos;yes&apos;, there is an incentive payment.</inlineHelpText>
        <label>Incentive Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncentiveStructure__c</fullName>
        <description>Field is associated to the Incentive Payments process.</description>
        <label>Incentive Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MWs</fullName>
                </value>
                <value>
                    <fullName>Broadcast Hours</fullName>
                </value>
                <value>
                    <fullName>Annual Performance Incentive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives_Monthly__c</fullName>
        <label>Incentives - Monthly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives_Quarterly__c</fullName>
        <label>Incentives - Quarterly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives_Yearly__c</fullName>
        <label>Incentives - Yearly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives__c</fullName>
        <label>Incentives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incomplete_Sponsorships_Count__c</fullName>
        <label>Incomplete Sponsorships Count</label>
        <summaryFilterItems>
            <field>AgreementSponsorship__c.IsBlankCheck__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AgreementSponsorship__c.Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InvoiceFrequency__c</fullName>
        <description>Field would apply to all payments under the Agreement.</description>
        <inlineHelpText>Frequency</inlineHelpText>
        <label>Invoice Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LatestAgreementCycle__c</fullName>
        <description>Do not show the field in any page layout&apos;s. Field is used in Approval Rule object records and workflow rules and its objective is to indicate what is the latest phase/cycle (aka, Original, Amendment, Renewal) of the Agreement record.</description>
        <formula>IF(TRIM(RIGHT(Name,7)) = &quot;Amended&quot;,&quot;Amended&quot;, 
IF(TRIM(RIGHT(Name,7)) = &quot;Renewed&quot;,&quot;Renewed&quot;, 
&quot;Original&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Agreement Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalEntityType__c</fullName>
        <label>Legal Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LicenseFeeAmount__c</fullName>
        <description>Field is associated to the License Fee Payments process.</description>
        <inlineHelpText>Please enter a currency amount.</inlineHelpText>
        <label>License Fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LicenseFeePayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is associated to the License Fee Payment process.</description>
        <inlineHelpText>If the field is &apos;checked&apos;, it means &apos;yes&apos;, there are license fee payments.</inlineHelpText>
        <label>License Fee Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LicenseFeeType__c</fullName>
        <description>Field is associated to the License Fee Payments process.</description>
        <label>License Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Exclusive Broadcasting Rights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveExclusivity__c</fullName>
        <label>Live Exclusivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>